--- a/Brewing/public/sneat/html/ui-footer.html
+++ b/Brewing/public/sneat/html/ui-footer.html
@@ -363,7 +363,7 @@
               </ul>
             </li>
 
-            <!-- Extended components -->
+            <!-- Extended Story -->
             <li class="menu-item">
               <a href="javascript:void(0)" class="menu-link menu-toggle">
                 <i class="menu-icon tf-icons bx bx-copy"></i>
@@ -606,7 +606,7 @@
               <!--/ Basic footer -->
               <hr class="container-m-nx border-light my-5" />
 
-              <!-- Footer with components -->
+              <!-- Footer with Story -->
               <section id="component-footer">
                 <h5 class="pb-1 mb-4">Footer with Elements</h5>
 
@@ -653,7 +653,7 @@
                   </div>
                 </footer>
               </section>
-              <!--/ Footer with components -->
+              <!--/ Footer with Story -->
             </div>
             <!-- / Content -->
 
