--- a/Brewing/public/sneat/html/extended-ui-perfect-scrollbar.html
+++ b/Brewing/public/sneat/html/extended-ui-perfect-scrollbar.html
@@ -365,7 +365,7 @@
               </ul>
             </li>
 
-            <!-- Extended components -->
+            <!-- Extended Story -->
             <li class="menu-item active open">
               <a href="javascript:void(0)" class="menu-link menu-toggle">
                 <i class="menu-icon tf-icons bx bx-copy"></i>
