--- a/Brewing/public/sneat/html/index.html
+++ b/Brewing/public/sneat/html/index.html
@@ -365,7 +365,7 @@
               </ul>
             </li>
 
-            <!-- Extended components -->
+            <!-- Extended Story -->
             <li class="menu-item">
               <a href="javascript:void(0)" class="menu-link menu-toggle">
                 <i class="menu-icon tf-icons bx bx-copy"></i>
